--- a/overview_paid/cibil-report/cibil-report.html
+++ b/overview_paid/cibil-report/cibil-report.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="../../scss/style.css">
     </head>
 
-    <body class="cibil-report">
+    <body class="cibil-report cibil-report-old">
         <div class="main-container">
             <div class="nav-container">
                 <div class="">
