--- a/overview_paid/index.html
+++ b/overview_paid/index.html
@@ -390,11 +390,11 @@
                                         <div class="hide-sm-down">
                                             <div class="link-container">
                                                 <img src="../images/static-images/eye-icon.svg" alt="" class="icon">
-                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">VIEW YOUR CIBIL REPORT</a>
+                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View Your Cibil Report</a>
                                             </div>
                                             <div class="link-container">
                                                 <img src="../images/static-images/print-icon.svg" alt="" class="icon">
-                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print YOUR CIBIL REPORT</a>
+                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print Your Cibil Report</a>
                                             </div>
                                         </div>
                                     </div>
@@ -404,11 +404,11 @@
                                         <div class="content">
                                             <div class="link-container">
                                                 <img src="../images/static-images/eye-icon.svg" alt="" class="icon">
-                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">VIEW YOUR CIBIL REPORT</a>
+                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View Your Cibil Report</a>
                                             </div>
                                             <div class="link-container">
                                                 <img src="../images/static-images/print-icon.svg" alt="" class="icon">
-                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print YOUR CIBIL REPORT</a>
+                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print Your Cibil Report</a>
                                             </div>
                                         </div>
                                     </div>
@@ -494,11 +494,11 @@
                                         <div class="hide-sm-down">
                                             <div class="link-container">
                                                 <img src="../images/static-images/eye-icon.svg" alt="" class="icon">
-                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">VIEW YOUR CIBIL REPORT</a>
+                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View Your Cibil Report</a>
                                             </div>
                                             <div class="link-container">
                                                 <img src="../images/static-images/print-icon.svg" alt="" class="icon">
-                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print YOUR CIBIL REPORT</a>
+                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print Your Cibil Report</a>
                                             </div>
                                         </div>
                                     </div>
@@ -508,11 +508,11 @@
                                         <div class="content">
                                             <div class="link-container">
                                                 <img src="../images/static-images/eye-icon.svg" alt="" class="icon">
-                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">VIEW YOUR CIBIL REPORT</a>
+                                                <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View Your Cibil Report</a>
                                             </div>
                                             <div class="link-container">
                                                 <img src="../images/static-images/print-icon.svg" alt="" class="icon">
-                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print YOUR CIBIL REPORT</a>
+                                                <a href="/pdfs/cibil-report.pdf" class="cibil-link cibil-link-right-icon" download>Print Your Cibil Report</a>
                                             </div>
                                         </div>
                                     </div>
@@ -587,7 +587,7 @@
                                         </p>
                                         <p class="summary-title">TOTAL accounts</p>
                                         <p class="summary-details">Total number of your credit cards and loan accounts.</p>
-                                        <a href="../overview_paid/cibil-report#account_3" class="cibil-link cibil-link-right-icon">View DETAILS</a>
+                                        <a href="../overview_paid/cibil-report#account_3" class="cibil-link cibil-link-right-icon">View Details</a>
                                     </div>
                                     <div class="summary-count-cta ">
                                         <p class="summary-count">
@@ -595,7 +595,7 @@
                                         </p>
                                         <p class="summary-title">Credit enquiries</p>
                                         <p class="summary-details">Number of times you have applied for a loan/credit card.</p>
-                                        <a href="../overview_paid/cibil-report#enquiry" class="cibil-link cibil-link-right-icon">View DETAILS</a>
+                                        <a href="../overview_paid/cibil-report#enquiry" class="cibil-link cibil-link-right-icon">View Details</a>
                                     </div>
                                 </div>
                                 <div class="small-ctas__wraper">
@@ -605,7 +605,7 @@
                                         </div>
                                         <p class="summary-title">Credit card usage</p>
                                         <p class="summary-details">Percentage of your total available credit limit that you have used.</p>
-                                        <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View DETAILS</a>
+                                        <a href="../overview_paid/cibil-report#account_1" class="cibil-link cibil-link-right-icon">View Details</a>
                                     </div>
                                     <div class="summary-count-cta vertical-position">
                                         <p class="summary-count">
@@ -613,7 +613,7 @@
                                         </p>
                                         <p class="summary-title">Age of Credit</p>
                                         <p class="summary-details">Age of your oldest credit card or loan account which is still in use.</p>
-                                        <a href="../overview_paid/cibil-report#account_4" class="cibil-link cibil-link-right-icon">View DETAILS</a>
+                                        <a href="../overview_paid/cibil-report#account_4" class="cibil-link cibil-link-right-icon">View Details</a>
                                     </div>
                                 </div>
                             </div>
